src/cpp14Parser.py
# Generated from grammar/cpp14Parser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cpp14Parser ( Parser ):

    grammarFileName = "cpp14Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'\"'", "'''", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "','", "';'", "'.'", "':'", 
                     "'='", "'+'", "'+='", "'&&'", "'&'", "'|'", "'-'", 
                     "'-='", "'*'", "'*='", "'/'", "'/='", "'%'", "'%='", 
                     "'<<'", "'<<='", "'>>'", "'>>='", "'=='", "'...'", 
                     "'<='", "'>='", "'->'", "'++'", "'--'", "'~'", "'!'", 
                     "'!='", "'||'", "'^'", "'bool'", "'break'", "'case'", 
                     "'char'", "'class'", "'const'", "'continue'", "'default'", 
                     "'delete'", "'do'", "'double'", "'else'", "'false'", 
                     "'float'", "'for'", "'if'", "'int'", "'long'", "'new'", 
                     "'nullptr'", "'private'", "'protected'", "'public'", 
                     "'return'", "'short'", "'signed'", "'sizeof'", "'struct'", 
                     "'switch'", "'this'", "'true'", "'typedef'", "'unsigned'", 
                     "'void'", "'while'" ]

    symbolicNames = [ "<INVALID>", "LT", "GT", "DQUOTE", "SQUOTE", "LBRACE", 
                      "RBRACE", "LSQUARE", "RSQUARE", "LPAREN", "RPAREN", 
                      "COMMA", "SEMI", "DOT", "COLON", "ASSIGN", "ADD", 
                      "ADD_ASSIGN", "AND", "BITAND", "BITOR", "SUB", "SUB_ASSIGN", 
                      "MULT", "MULT_ASSIGN", "DIV", "DIV_ASSIGN", "MOD", 
                      "MOD_ASSIGN", "LSHIFT", "LSHIFT_ASSIGN", "RSHIFT", 
                      "RSHIFT_ASSIGN", "EQ", "DOTS", "LEQ", "GEQ", "ARROW", 
                      "PLUS_PLUS", "MINUS_MINUS", "COMPL", "NOT", "NOT_EQ", 
                      "OR", "XOR", "BOOL", "BREAK", "CASE", "CHAR", "CLASS", 
                      "CONST", "CONTINUE", "DEFAULT", "DELETE", "DO", "DOUBLE", 
                      "ELSE", "FALSE_", "FLOAT", "FOR", "IF", "INT", "LONG", 
                      "NEW", "NULLPTR", "PRIVATE", "PROTECTED", "PUBLIC", 
                      "RETURN", "SHORT", "SIGNED", "SIZEOF", "STRUCT", "SWITCH", 
                      "THIS", "TRUE_", "TYPEDEF", "UNSIGNED", "VOID", "WHILE", 
                      "WHITESPACE", "NEWLINE", "LINE_COMMENT", "COMMENT", 
                      "Identifier", "StringLiteral", "CharacterLiteral", 
                      "DecimalLiteral", "FloatingLiteral", "DigitSequence", 
                      "DecimalExponent", "SChar", "CChar", "Escapesequence", 
                      "Simpleescapesequence", "Octalescapesequence", "Hexadecimalescapesequence", 
                      "Universalcharactername" ]

    RULE_literals = 0
    RULE_floatingLiteral = 1
    RULE_integerLiteral = 2
    RULE_characterLiteral = 3
    RULE_stringLiteral = 4
    RULE_translationUnit = 5
    RULE_baseSpecifierList = 6
    RULE_accessSpecifier = 7
    RULE_accessLabel = 8
    RULE_memberDeclaration = 9
    RULE_constructorDeclaration = 10
    RULE_destructorDeclaration = 11
    RULE_memberSpecification = 12
    RULE_classDefinition = 13
    RULE_constExpression = 14
    RULE_leftExpression = 15
    RULE_expression = 16
    RULE_statement = 17
    RULE_block = 18
    RULE_functionCall = 19
    RULE_ifStatement = 20
    RULE_caseStatement = 21
    RULE_switchStatement = 22
    RULE_whileStatement = 23
    RULE_doWhileStatement = 24
    RULE_forStatement = 25
    RULE_forExprSet = 26
    RULE_returnStatement = 27
    RULE_breakStatement = 28
    RULE_continueStatement = 29
    RULE_declaration = 30
    RULE_arrayDeclarator = 31
    RULE_variableDeclaration = 32
    RULE_variableDeclarator = 33
    RULE_functionDeclaration = 34
    RULE_functionParameter = 35
    RULE_typeSpecifier = 36
    RULE_pointerTypeSpecifier = 37
    RULE_integerTypeSpecifier = 38
    RULE_realTypeSpecifier = 39
    RULE_booleanTypeSpecifier = 40
    RULE_charTypeSpecifier = 41
    RULE_voidTypeSpecifier = 42

    ruleNames =  [ "literals", "floatingLiteral", "integerLiteral", "characterLiteral", 
                   "stringLiteral", "translationUnit", "baseSpecifierList", 
                   "accessSpecifier", "accessLabel", "memberDeclaration", 
                   "constructorDeclaration", "destructorDeclaration", "memberSpecification", 
                   "classDefinition", "constExpression", "leftExpression", 
                   "expression", "statement", "block", "functionCall", "ifStatement", 
                   "caseStatement", "switchStatement", "whileStatement", 
                   "doWhileStatement", "forStatement", "forExprSet", "returnStatement", 
                   "breakStatement", "continueStatement", "declaration", 
                   "arrayDeclarator", "variableDeclaration", "variableDeclarator", 
                   "functionDeclaration", "functionParameter", "typeSpecifier", 
                   "pointerTypeSpecifier", "integerTypeSpecifier", "realTypeSpecifier", 
                   "booleanTypeSpecifier", "charTypeSpecifier", "voidTypeSpecifier" ]

    EOF = Token.EOF
    LT=1
    GT=2
    DQUOTE=3
    SQUOTE=4
    LBRACE=5
    RBRACE=6
    LSQUARE=7
    RSQUARE=8
    LPAREN=9
    RPAREN=10
    COMMA=11
    SEMI=12
    DOT=13
    COLON=14
    ASSIGN=15
    ADD=16
    ADD_ASSIGN=17
    AND=18
    BITAND=19
    BITOR=20
    SUB=21
    SUB_ASSIGN=22
    MULT=23
    MULT_ASSIGN=24
    DIV=25
    DIV_ASSIGN=26
    MOD=27
    MOD_ASSIGN=28
    LSHIFT=29
    LSHIFT_ASSIGN=30
    RSHIFT=31
    RSHIFT_ASSIGN=32
    EQ=33
    DOTS=34
    LEQ=35
    GEQ=36
    ARROW=37
    PLUS_PLUS=38
    MINUS_MINUS=39
    COMPL=40
    NOT=41
    NOT_EQ=42
    OR=43
    XOR=44
    BOOL=45
    BREAK=46
    CASE=47
    CHAR=48
    CLASS=49
    CONST=50
    CONTINUE=51
    DEFAULT=52
    DELETE=53
    DO=54
    DOUBLE=55
    ELSE=56
    FALSE_=57
    FLOAT=58
    FOR=59
    IF=60
    INT=61
    LONG=62
    NEW=63
    NULLPTR=64
    PRIVATE=65
    PROTECTED=66
    PUBLIC=67
    RETURN=68
    SHORT=69
    SIGNED=70
    SIZEOF=71
    STRUCT=72
    SWITCH=73
    THIS=74
    TRUE_=75
    TYPEDEF=76
    UNSIGNED=77
    VOID=78
    WHILE=79
    WHITESPACE=80
    NEWLINE=81
    LINE_COMMENT=82
    COMMENT=83
    Identifier=84
    StringLiteral=85
    CharacterLiteral=86
    DecimalLiteral=87
    FloatingLiteral=88
    DigitSequence=89
    DecimalExponent=90
    SChar=91
    CChar=92
    Escapesequence=93
    Simpleescapesequence=94
    Octalescapesequence=95
    Hexadecimalescapesequence=96
    Universalcharactername=97

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def floatingLiteral(self):
            return self.getTypedRuleContext(cpp14Parser.FloatingLiteralContext,0)


        def integerLiteral(self):
            return self.getTypedRuleContext(cpp14Parser.IntegerLiteralContext,0)


        def characterLiteral(self):
            return self.getTypedRuleContext(cpp14Parser.CharacterLiteralContext,0)


        def stringLiteral(self):
            return self.getTypedRuleContext(cpp14Parser.StringLiteralContext,0)


        def getRuleIndex(self):
            return cpp14Parser.RULE_literals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiterals" ):
                listener.enterLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiterals" ):
                listener.exitLiterals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):

        localctx = cpp14Parser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_literals)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [88]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.floatingLiteral()
                pass
            elif token in [87]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.integerLiteral()
                pass
            elif token in [86]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.characterLiteral()
                pass
            elif token in [85]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.stringLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatingLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FloatingLiteral(self):
            return self.getToken(cpp14Parser.FloatingLiteral, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_floatingLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatingLiteral" ):
                listener.enterFloatingLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatingLiteral" ):
                listener.exitFloatingLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatingLiteral" ):
                return visitor.visitFloatingLiteral(self)
            else:
                return visitor.visitChildren(self)




    def floatingLiteral(self):

        localctx = cpp14Parser.FloatingLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_floatingLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(cpp14Parser.FloatingLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DecimalLiteral(self):
            return self.getToken(cpp14Parser.DecimalLiteral, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_integerLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerLiteral" ):
                listener.enterIntegerLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerLiteral" ):
                listener.exitIntegerLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerLiteral" ):
                return visitor.visitIntegerLiteral(self)
            else:
                return visitor.visitChildren(self)




    def integerLiteral(self):

        localctx = cpp14Parser.IntegerLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_integerLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(cpp14Parser.DecimalLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharacterLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CharacterLiteral(self):
            return self.getToken(cpp14Parser.CharacterLiteral, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_characterLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharacterLiteral" ):
                listener.enterCharacterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharacterLiteral" ):
                listener.exitCharacterLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharacterLiteral" ):
                return visitor.visitCharacterLiteral(self)
            else:
                return visitor.visitChildren(self)




    def characterLiteral(self):

        localctx = cpp14Parser.CharacterLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_characterLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(cpp14Parser.CharacterLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(cpp14Parser.StringLiteral, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_stringLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)




    def stringLiteral(self):

        localctx = cpp14Parser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stringLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(cpp14Parser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cpp14Parser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cpp14Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(cpp14Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return cpp14Parser.RULE_translationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationUnit" ):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationUnit" ):
                listener.exitTranslationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationUnit" ):
                return visitor.visitTranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def translationUnit(self):

        localctx = cpp14Parser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la - 45)) & ~0x3f) == 0 and ((1 << (_la - 45)) & 8741135385) != 0:
                self.state = 100
                self.declaration()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(cpp14Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseSpecifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(cpp14Parser.Identifier)
            else:
                return self.getToken(cpp14Parser.Identifier, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cpp14Parser.COMMA)
            else:
                return self.getToken(cpp14Parser.COMMA, i)

        def accessSpecifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cpp14Parser.AccessSpecifierContext)
            else:
                return self.getTypedRuleContext(cpp14Parser.AccessSpecifierContext,i)


        def getRuleIndex(self):
            return cpp14Parser.RULE_baseSpecifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseSpecifierList" ):
                listener.enterBaseSpecifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseSpecifierList" ):
                listener.exitBaseSpecifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseSpecifierList" ):
                return visitor.visitBaseSpecifierList(self)
            else:
                return visitor.visitChildren(self)




    def baseSpecifierList(self):

        localctx = cpp14Parser.BaseSpecifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_baseSpecifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 7) != 0:
                self.state = 108
                self.accessSpecifier()


            self.state = 111
            self.match(cpp14Parser.Identifier)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 113
                self.match(cpp14Parser.COMMA)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 7) != 0:
                    self.state = 114
                    self.accessSpecifier()


                self.state = 117
                self.match(cpp14Parser.Identifier)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(cpp14Parser.PUBLIC, 0)

        def PROTECTED(self):
            return self.getToken(cpp14Parser.PROTECTED, 0)

        def PRIVATE(self):
            return self.getToken(cpp14Parser.PRIVATE, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_accessSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSpecifier" ):
                listener.enterAccessSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSpecifier" ):
                listener.exitAccessSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessSpecifier" ):
                return visitor.visitAccessSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def accessSpecifier(self):

        localctx = cpp14Parser.AccessSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_accessSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 7) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSpecifier(self):
            return self.getTypedRuleContext(cpp14Parser.AccessSpecifierContext,0)


        def COLON(self):
            return self.getToken(cpp14Parser.COLON, 0)

        def getRuleIndex(self):
            return cpp14Parser.RULE_accessLabel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessLabel" ):
                listener.enterAccessLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessLabel" ):
                listener.exitAccessLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessLabel" ):
                return visitor.visitAccessLabel(self)
            else:
                return visitor.visitChildren(self)




    def accessLabel(self):

        localctx = cpp14Parser.AccessLabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_accessLabel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.accessSpecifier()
            self.state = 126
            self.match(cpp14Parser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(cpp14Parser.FunctionDeclarationContext,0)


        def variableDeclarator(self):
            return self.getTypedRuleContext(cpp14Parser.VariableDeclaratorContext,0)


        def getRuleIndex(self):
            return cpp14Parser.RULE_memberDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDeclaration" ):
                listener.enterMemberDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDeclaration" ):
                listener.exitMemberDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDeclaration" ):
                return visitor.visitMemberDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def memberDeclaration(self):

        localctx = cpp14Parser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_memberDeclaration)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.functionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.variableDeclarator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(cpp14Parser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(cpp14Parser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cpp14Parser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(cpp14Parser.BlockContext,0)


        def functionParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cpp14Parser.FunctionParameterContext)
            else:
                return self.getTypedRuleContext(cpp14Parser.FunctionParameterContext,i)


        def COLON(self):
            return self.getToken(cpp14Parser.COLON, 0)

        def functionCall(self):
            return self.getTypedRuleContext(cpp14Parser.FunctionCallContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cpp14Parser.COMMA)
            else:
                return self.getToken(cpp14Parser.COMMA, i)

        def getRuleIndex(self):
            return cpp14Parser.RULE_constructorDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDeclaration" ):
                listener.enterConstructorDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDeclaration" ):
                listener.exitConstructorDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorDeclaration" ):
                return visitor.visitConstructorDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constructorDeclaration(self):

        localctx = cpp14Parser.ConstructorDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constructorDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(cpp14Parser.Identifier)
            self.state = 133
            self.match(cpp14Parser.LPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la - 34)) & ~0x3f) == 0 and ((1 << (_la - 34)) & 17626967328769) != 0:
                self.state = 134
                self.functionParameter()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 135
                    self.match(cpp14Parser.COMMA)
                    self.state = 136
                    self.functionParameter()
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(cpp14Parser.RPAREN)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 145
                self.match(cpp14Parser.COLON)
                self.state = 146
                self.functionCall()


            self.state = 149
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPL(self):
            return self.getToken(cpp14Parser.COMPL, 0)

        def Identifier(self):
            return self.getToken(cpp14Parser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(cpp14Parser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cpp14Parser.RPAREN, 0)

        def block(self):
